# video-processor

./: .gitignore  Dockerfile  Makefile  README.md  UPGRADE.md  docker-compose.integration.yml  docker-compose.yml  pyproject.toml  run_tests.py  validate_complete_system.py
.github/workflows/: integration-tests.yml
docker/: init-db.sql
docs/: README.md
docs/development/: COMPREHENSIVE_DEVELOPMENT_SUMMARY.md
docs/migration/: MIGRATION_GUIDE_v0.4.0.md  UPGRADE.md
docs/reference/: ADVANCED_FEATURES.md  CHANGELOG.md  ROADMAP.md
docs/user-guide/: NEW_FEATURES_v0.4.0.md  README_v0.4.0.md
examples/: 360_video_examples.py  README.md  advanced_codecs_demo.py  ai_enhanced_processing.py  async_processing.py  basic_usage.py  custom_config.py  docker_demo.py  streaming_demo.py  video_360_example.py  web_demo.py  worker_compatibility.py
scripts/: run-integration-tests.sh
src/video_processor/: __init__.py  config.py  exceptions.py
src/video_processor/ai/: __init__.py  content_analyzer.py
src/video_processor/core/: __init__.py  advanced_encoders.py  encoders.py  enhanced_processor.py  metadata.py  processor.py  thumbnails.py  thumbnails_360.py
src/video_processor/storage/: __init__.py  backends.py
src/video_processor/streaming/: __init__.py  adaptive.py  dash.py  hls.py
src/video_processor/tasks/: __init__.py  compat.py  migration.py  procrastinate_tasks.py  worker_compatibility.py
src/video_processor/utils/: __init__.py  ffmpeg.py  paths.py  sprite_generator.py  video_360.py
src/video_processor/video_360/: __init__.py  conversions.py  models.py  processor.py  spatial_audio.py  streaming.py
tests/: __init__.py  conftest.py  test_360_basic.py  test_360_comprehensive.py  test_360_integration.py  test_config.py  test_procrastinate_compat.py  test_procrastinate_migration.py  test_utils.py  test_video_360.py
tests/docker/: docker-compose.integration.yml
tests/fixtures/: __init__.py  download_360_videos.py  download_test_videos.py  generate_360_synthetic.py  generate_fixtures.py  generate_synthetic_videos.py  test_suite_manager.py
tests/fixtures/videos/: test_suite.json
tests/fixtures/videos/opensource/: manifest.json
tests/fixtures/videos/synthetic/motion/: scene_changes.txt
tests/fixtures/videos/synthetic_test/motion/: scene_changes.txt
tests/framework/: README.md  __init__.py  config.py  demo_test.py  enhanced_dashboard_reporter.py  fixtures.py  pytest_plugin.py  quality.py  reporters.py  test_framework_demo.py
tests/integration/: README.md  __init__.py  conftest.py  test_comprehensive_video_processing.py  test_database_migration_e2e.py  test_procrastinate_worker_e2e.py  test_video_processing_e2e.py
tests/unit/: test_adaptive_streaming.py  test_advanced_codec_integration.py  test_advanced_encoders.py  test_ai_content_analyzer.py  test_enhanced_processor.py  test_ffmpeg_integration.py  test_ffmpeg_utils.py  test_processor_comprehensive.py
